[gd_scene load_steps=5 format=2]

[ext_resource path="res://BlackHoleStation/BlackHolePortal.png" type="Texture" id=1]
[ext_resource path="res://Utility/InteractableObject.tscn" type="PackedScene" id=2]
[ext_resource path="res://BlackHoleStation/BlackholePortal.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 166.163

[node name="BlackholePortal" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="BlackHolePortal" type="Sprite" parent="Area2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="InteractableObject" parent="." instance=ExtResource( 2 )]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
